--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,7 @@
+@charset "utf-8";
+
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}";
+@import "minimal-mistakes";
 @font-face {
 	font-family: 'Circular Medium';
 	src: url(/fonts/RobotoCondensed-Regular.ttf); }
